...
        }
        return model
    }
    
    private func getAlertModelForFinal() -> AlertModel {
        let alertModel = AlertModel(
            title: "Игра окончена!",
            message: makeResultMessage(),
            buttonText: "Сыграть еще раз!",
            buttonAction: { [weak self] in
                self?.restartGame()
            }
        )
...
